@@ -1,4 +1,4 @@
-# This file was automatically generated by tmake at 12:46, 2001/10/30
+# This file was automatically generated by tmake at 17:52, 2001/10/30
 # DO NOT CHANGE THIS FILE, YOUR CHANGES WILL BE LOST! CHANGE G95.T!
 
 #
@@ -125,6 +125,7 @@ COMMONOBJS  = \
 		$(COMMDIR)/dobjcmn.$(OBJSUFF) \
 		$(COMMDIR)/docmdi.$(OBJSUFF) \
 		$(COMMDIR)/docview.$(OBJSUFF) \
+		$(COMMDIR)/dseldlg.$(OBJSUFF) \
 		$(COMMDIR)/dynarray.$(OBJSUFF) \
 		$(COMMDIR)/dynlib.$(OBJSUFF) \
 		$(COMMDIR)/effects.$(OBJSUFF) \
