@@ -1,6 +1,6 @@
 
 
-# This file was automatically generated by tmake at 12:46, 2001/10/30
+# This file was automatically generated by tmake at 17:52, 2001/10/30
 # DO NOT CHANGE THIS FILE, YOUR CHANGES WILL BE LOST! CHANGE SC.T!
 
 # Symantec C++ makefile for the msw objects
@@ -81,6 +81,7 @@ COMMONOBJS = \
 		$(COMMDIR)\dobjcmn.obj \
 		$(COMMDIR)\docmdi.obj \
 		$(COMMDIR)\docview.obj \
+		$(COMMDIR)\dseldlg.obj \
 		$(COMMDIR)\dynarray.obj \
 		$(COMMDIR)\dynlib.obj \
 		$(COMMDIR)\effects.obj \
